# 2025_Quant_Finance_Study_Program

./: DAY1.md  DAY10.md  DAY11.md  DAY12.md  DAY13.md  DAY14.md  DAY2.md  DAY3.md  DAY4.md  DAY5.md  DAY6.md  DAY7.md  DAY8.md  DAY9.md  README.md  README.md.old
Week_1/Day_1/: notebook.ipynb
Week_1/Day_1/src/: day1_portfolio.py
Week_1/Day_2/: notebook.ipynb
Week_1/Day_2/src/: day2_optimization.py
Week_1/Day_3/: notebook.ipynb
Week_1/Day_3/src/: day3_margin.py
Week_1/Day_4/: notebook.ipynb
Week_1/Day_4/src/: day4_risk_metrics.py
Week_1/Day_5/: notebook.ipynb
Week_1/Day_5/src/: day5_collateral.py
Week_1/Day_6/: notebook.ipynb
Week_1/Day_6/src/: day6_requirements.md
Week_1/Day_7/: notebook.ipynb
Week_1/Day_7/src/: day7_margin_model.py  day7_summary.md
Week_2/Day_10/: notebook.ipynb
Week_2/Day_10/src/: day10_multi_asset.py
Week_2/Day_11/: notebook.ipynb
Week_2/Day_11/src/: day11_liquidity.py
Week_2/Day_12/: notebook.ipynb
Week_2/Day_12/src/: day12_presentation.md  day12_project_plan.md
Week_2/Day_13/: notebook.ipynb
Week_2/Day_13/src/: day13_capstone.py  (+1 more)
Week_2/Day_14/: notebook.ipynb  pyproject.toml
Week_2/Day_14/src/: day14_presentation.md  day14_sensitivity.py
Week_2/Day_8/: notebook.ipynb
Week_2/Day_9/: notebook.ipynb
notebooks/: day10_notebook.ipynb  day11_notebook.ipynb  day12_notebook.ipynb  day13_notebook.ipynb  day14_notebook.ipynb  day1_notebook.ipynb  day2_notebook.ipynb  day3_notebook.ipynb  day4_notebook.ipynb  day5_notebook.ipynb  day6_notebook.ipynb  day7_notebook.ipynb  day8_notebook.ipynb  day9_notebook.ipynb
(+2 files in other folders)
